--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ Tags: dark, light, white, black, gray, one-column, two-columns, left-sidebar, ri
 body {
 	font-family:Helvetica,Verdana,Arial,sans-serif;
 	background-repeat:repeat;
-	background-image:url(images/bg.jpg)
+	background-image:url(images/bg.jpg);
+	float: left;
 }
 
 a:link {
@@ -22,44 +23,62 @@ a:link {
 	color:#006CE2
 }
 
-.entry-header a:link {
-	text-decoration:none;
-	color:#000
-}
+
 
 a:visited {
 	text-decoration:none;
 	color:#006CE2
 }
 
-.entry-header a:visited {
-	text-decoration:none;
-	color:#000
-}
+
 
 a:hover {
 	text-decoration:none;
 	color:#006CE2
 }
 
-.entry-header a:hover {
-	text-decoration:none;
-	color:#000;
-	background-color:#BBCEF1;
-	-moz-border-radius: 7px;
-	border-radius: 7px;
-	border: #6D95E0 1px solid;
-	height: 13px;
-}
+
 
 a:active {
 	text-decoration:none;
 	color:#006CE2
 }
 
-.entry-header a:active {
-	text-decoration:none;
-	color:#000
+#site-header {
+	float: inherit;
+	max-width: 960px;
+	margin-right:auto;
+	margin-left:auto;
+	margin-bottom: 8px;
+}
+
+#site-banner {
+	float: left;
+	width: 632px;
+	height: 220px;
+	border-color:#adadad;
+	border-width:1px;
+	border-style:hidden;
+	padding:0px;
+	margin-right: 8px;
+	background-color:#fff;
+	-webkit-box-shadow:0 10px 8px -4px #555;
+	-moz-box-shadow:0 10px 8px -4px #555;
+	box-shadow:0 10px 8px -4px #555
+}
+
+#site-title {
+	float: left;
+	width: 320px;
+	height: 220px;
+	border-color:#adadad;
+	border-width:1px;
+	border-style:hidden;
+	padding:0px;
+	background-color:#fff;
+	-webkit-box-shadow:0 10px 8px -4px #555;
+	-moz-box-shadow:0 10px 8px -4px #555;
+	box-shadow:0 10px 8px -4px #555
 }
 
 #articles {
@@ -80,16 +99,40 @@ a:active {
 	border-style:hidden;
 	padding:1.5%;
 	background-color:#fff;
-	height:100%;
-	width:100%;
+	width:97%;
 	-webkit-box-shadow:0 10px 8px -4px #555;
 	-moz-box-shadow:0 10px 8px -4px #555;
 	box-shadow:0 10px 8px -4px #555
 }
 
 .entry-header {
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 	width: 100%
+}
+
+.entry-header a:active {
+	text-decoration:none;
+	color:#000
+}
+
+.entry-header a:hover {
+	text-decoration:none;
+	color:#000;
+	background-color:#BBCEF1;
+	-moz-border-radius: 7px;
+	border-radius: 7px;
+	border: #6D95E0 1px solid;
+	height: 13px;
+}
+
+.entry-header a:visited {
+	text-decoration:none;
+	color:#000
+}
+
+.entry-header a:link {
+	text-decoration:none;
+	color:#000
 }
 
 h1.entry-title {
@@ -133,8 +176,58 @@ h2.entry-meta {
 	float: left;
 }
 
+/*Post Controls*/
+#post-divider {
+	margin-bottom: 10px;
+}
+
+
+hr.hr1 {
+	z-index: 9000;
+    border: 0;
+    height: 0;
+    width: 100%;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    position: relative;
+    top: 25px;
+}
+
+#post-controls {
+	z-index: 9001;
+	position: relative;
+    background:url("images/post-controls.png") no-repeat;
+    width: 85px;
+    height: 21px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0;
+}
+
+#post-controls li, #post-controls a {
+    height: 21px;
+    display: block;
+}
+
+#post-controls li {
+	float: left;
+    list-style: none;
+    display: inline;
+    text-indent: -9999em;
+}
+
+#reply-control { width: 28px; }
+#tweet-control { width: 28px; }
+#forward-control { width: 28px; }
+
+#reply-control a:hover { background:url("images/post-controls.png") 0px -21px no-repeat; }
+#tweet-control a:hover { background:url("images/post-controls.png") -28px -42px no-repeat; }
+#forward-control a:hover { background:url("images/post-controls.png") -56px -63px no-repeat; }
+
 /*Post Content*/
 .entry-content {
+
+	display: block;
 
 }
 
@@ -164,4 +257,86 @@ img.size-large {
 	margin-bottom: 0;
 	margin-top: 0;
 	padding: 0;
+}
+
+/* =WordPress Core
+-------------------------------------------------------------- */
+.alignnone {
+    margin: 5px 20px 20px 0;
+}
+
+.aligncenter, div.aligncenter {
+    display:block;
+    margin: 5px auto 5px auto;
+}
+
+.alignright {
+    float:right;
+    margin: 5px 0 20px 20px;
+}
+
+.alignleft {
+    float:left;
+    margin: 5px 20px 20px 0;
+}
+
+.aligncenter {
+    display: block;
+    margin: 5px auto 5px auto;
+}
+
+a img.alignright {
+    float:right;
+    margin: 5px 0 20px 20px;
+}
+
+a img.alignnone {
+    margin: 5px 20px 20px 0;
+}
+
+a img.alignleft {
+    float:left;
+    margin: 5px 20px 20px 0;
+}
+
+a img.aligncenter {
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+}
+
+.wp-caption {
+    background: #fff;
+    border: 1px solid #f0f0f0;
+    max-width: 96%; /* Image does not overflow the content area */
+    padding: 5px 3px 10px;
+    text-align: center;
+}
+
+.wp-caption.alignnone {
+    margin: 5px 20px 20px 0;
+}
+
+.wp-caption.alignleft {
+    margin: 5px 20px 20px 0;
+}
+
+.wp-caption.alignright {
+    margin: 5px 0 20px 20px;
+}
+
+.wp-caption img {
+    border: 0 none;
+    height: auto;
+    margin:0;
+    max-width: 98.5%;
+    padding:0;
+    width: auto;
+}
+
+.wp-caption p.wp-caption-text {
+    font-size:11px;
+    line-height:17px;
+    margin:0;
+    padding:0 4px 5px;
 }
